# enterprise-mlops-platform

./: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  train.yml
k8s/: deployment.yaml  hpa.yaml  service.yaml
scripts/: check_drift.py  train.py
src/mlops_platform/: __init__.py  config.py
src/mlops_platform/api/: main.py  schemas.py
src/mlops_platform/deployment/: deployer.py
src/mlops_platform/registry/: model_registry.py
tests/: test_api.py  test_drift.py  test_pipeline.py  test_registry.py
